# murmura

./: .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  DIFFERENTIAL_PRIVACY_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  SCALABILITY_ANALYSIS.md  automated_experiment_runner.py  data.json  experiment_analysis.py  experiment_metrics_collector.py  experiment_suite.py  experiment_validator.py  paper_experiment_suite.py  paper_experiments.py  pyproject.toml  pytest.ini  rerun_attacks.py  rerun_failed_experiments.py  scalability_experiments.py  trust_monitor_technical_report.md
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml  coverage.yml  landing-page-deploy.yml
.swm/: data-pre-processing.samvegha.sw.md  dataset-partitioner.1v7ywwfn.sw.md  dataset.m26k5b3f.sw.md  learning-orchestration.e0tqzdwq.sw.md  network-management.qbo42gn7.sw.md  swimm.json
analysis_results/: README.md
documentation/new_murmura_extension/: murmura_architecture.mmd  (+2 more)
experiments/: COMPARISON_RESULTS.md  EXPERIMENTAL_RESULTS.md  README.md  TRUST_TESTING.md  quick_trust_analysis_summary.json  trust_test_suite.py
experiments_archive/: CLEANED_STRUCTURE.md  EXPERIMENTAL_RESULTS_SECTION.tex  README.md  RESTRUCTURING_SUMMARY.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_083e08c9ee1e3b5f_fed_avg_py.html  z_083e08c9ee1e3b5f_gossip_avg_py.html  z_083e08c9ee1e3b5f_trimmed_mean_py.html  z_22ec9904c891f597_network_visualizer_py.html  z_22ec9904c891f597_training_event_py.html  z_22ec9904c891f597_training_observer_py.html  z_248f11f2975efc9d_dp_aggregation_py.html  z_248f11f2975efc9d_dp_config_py.html  z_248f11f2975efc9d_dp_model_wrapper_py.html  z_248f11f2975efc9d_privacy_accountant_py.html  z_30917e984c53ea20_helper_py.html  z_68617fbbde8d0df0_client_actor_py.html  z_68617fbbde8d0df0_resource_config_py.html  z_6c7b6a64da580fed_aggregation_config_py.html  z_6c7b6a64da580fed_coordination_mode_py.html  z_6c7b6a64da580fed_strategy_factory_py.html  z_6c7b6a64da580fed_strategy_interface_py.html  z_815c42c37464c07f_attack_partitioner_py.html  z_815c42c37464c07f_data_preprocessor_py.html  z_815c42c37464c07f_dataset_py.html  z_815c42c37464c07f_partitioner_factory_py.html  z_815c42c37464c07f_partitioner_py.html  z_871750abc6aac0b2___init___py.html  z_871750abc6aac0b2_cifar10_models_py.html  z_871750abc6aac0b2_ham10000_models_py.html  z_871750abc6aac0b2_mnist_models_py.html  z_871750abc6aac0b2_skin_lesion_models_py.html  z_9bf04ecdfbf50fd5_decentralized_learning_process_py.html  z_9bf04ecdfbf50fd5_federated_learning_process_py.html  z_9bf04ecdfbf50fd5_learning_process_py.html  z_9fb9a77b68afe2c5_decentralized_mnist_example_py.html  z_9fb9a77b68afe2c5_decentralized_skin_lesion_example_py.html  z_9fb9a77b68afe2c5_dp_cifar10_example_py.html  z_9fb9a77b68afe2c5_dp_decentralized_cifar10_example_py.html  z_9fb9a77b68afe2c5_dp_decentralized_ham10000_example_py.html  z_9fb9a77b68afe2c5_dp_decentralized_mnist_example_py.html  (+17 more)
murmura/: cli.py  config.py  helper.py
scalability_results/: experiment_checkpoint.json
scripts/: README.md  analyze_enhanced_results.py  analyze_resource_experiments.py  quick_trust_test.py  resource_aware_sampling_experiments.py  run_trust_baseline_experiments.py  test_enhanced_trust_evaluation.sh
tests/: helper_test.py  test_attack_implementation.py
trust_results/: trust_aware_results.json
(+49380 files in other folders)
