[project]
name = "murmura"
version = "0.1.0"
description = "A decentralized federated learning library"
license = "GPL-3.0-only"
authors = [
    {name = "Murtaza Rangwala",email = "murtazahatimr@icloud.com"}
]
readme = "README.md"
repository = "https://github.com/murtazahr/murmura"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "pandas-stubs (>=2.2.3.241126,<3.0.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "ray (>=2.41.0,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.3"
mypy = "^1.14.1"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
markers = "integration: marks tests that require external resources (like HuggingFace datasets)"
filterwarnings = ["ignore:DeprecationWarning"]

[tool.coverage.run]
relative_files = true

[[tool.mypy.overrides]]
module = ["torch.*", "torch", "ray.*", "datasets.*", "matplotlib.*", "networkx.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"